# PDF

./: .gitignore  APDF_PLAN.md  AWS_NOTES.md  BENCHMARKING_RESEARCH.md  CLAUDE.md  Cargo.toml  DEPLOY.md  DOCSIGN_DEPLOY.md  DOCSIGN_PLAN.md  ESTATE_RESEARCH.md  FL_LEASE.md  FL_LIST.md  FL_PURCHASE.md  INTEGRATION_PLAN.md  KNOWN_ISSUES.md  LEASE_RESEARCH.md  PDFJOIN_EDIT_PLAN.md  PDFJOIN_RESEARCH.md  PLAN.md  PLAN0.md  PLAN1.md  README.md  RESEARCH.md  STRATEGY.md  TAX_RESEARCH.md  UX_IMPROVEMENT_PLAN.md  test_corpus_compile.sh  test_signature_detection
.config/: nextest.toml
apps/agentpdf-server/: Cargo.toml
apps/agentpdf-server/proptest-regressions/: tests.txt
apps/agentpdf-server/src/: api.rs  error.rs  main.rs  tests.rs
apps/agentpdf-web/wasm/: Cargo.toml
apps/agentpdf-web/wasm/src/: audit_display.rs  compliance_panel.rs  field_export.rs  fields.rs  lib.rs  overlay.rs  page_ranges.rs  pdf_renderer.rs  pdf_text.rs  pdf_viewer.rs  rate_limit.rs  storage.rs
apps/corpus-api/: Cargo.toml
apps/corpus-api/src/: main.rs  state.rs
apps/corpus-api/src/handlers/: mod.rs
apps/docsign-api/: Cargo.toml
apps/docsign-api/src/: error.rs  handlers.rs  main.rs  models.rs  state.rs
apps/docsign-api/tests/: property_tests.proptest-regressions  property_tests.rs
apps/docsign-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/docsign-tauri/src-tauri/icons/: icon.icns
apps/docsign-tauri/src-tauri/src/: lib.rs  main.rs  tray.rs
apps/docsign-web/wasm/: Cargo.toml
apps/docsign-web/wasm/src/: coords.rs  lib.rs  verification.rs
apps/docsign-web/worker/: Cargo.toml  decline_handler.txt  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
apps/docsign-web/worker/src/: lib.rs
apps/docsign-web/worker/test/: auth.test.ts  base64.test.ts  session.test.ts
apps/mcp-server/: Cargo.toml
apps/mcp-server/src/: lib.rs  main.rs
apps/mcp-server/src/mcp/: mod.rs  prompts.rs  protocol.rs  resources.rs  server.rs  tools.rs
apps/mcp-server/src/transport/: http.rs  mod.rs  stdio.rs
apps/pdfjoin-web/wasm/: Cargo.toml  libcoords.rlib
apps/pdfjoin-web/wasm/src/: edit_session.rs  lib.rs  page_info.rs  session.rs  validation.rs
crates/benchmark-harness/: Cargo.toml  README.md  STRUCTURE.md
crates/benchmark-harness/examples/: agentpdf-local.toml  benchmark.toml  docsign-local.toml  run_benchmark.rs  throttling_example.rs  validate_config.rs
crates/benchmark-harness/scenarios/: agentpdf-quick.toml  agentpdf.toml  getsignatures.toml  pdfjoin.toml
crates/benchmark-harness/src/: config.rs  lib.rs  runner.rs
crates/benchmark-harness/src/metrics/: custom.rs  mod.rs  web_vitals.rs
crates/benchmark-harness/src/reporter/: console.rs  json.rs  markdown.rs  mod.rs
crates/benchmark-harness/src/stats/: mod.rs  outliers.rs  percentiles.rs
crates/benchmark-harness/src/throttling/: README.md  cpu.rs  mod.rs  network.rs
crates/benchmark-harness/tests/: browser_agentpdf.rs  browser_core.rs  browser_docsign.rs  browser_docsign_proptest.rs  browser_pdfjoin.rs  browser_tests.rs  parity_tests.rs  pdfjoin_benchmark.rs  pdfjoin_stress.rs  throttling_integration.rs
crates/benchmark-harness/tests/common/: browser.rs  paths.rs  server.rs
crates/compliance-engine/: Cargo.toml
crates/compliance-engine/proptest-regressions/states/: florida_contractor.txt  florida_realestate.txt
crates/compliance-engine/src/: calendar.rs  jurisdiction.rs  lib.rs  patterns.rs
crates/compliance-engine/src/extractors/: mod.rs  numeric.rs
crates/compliance-engine/src/layers/: federal.rs  local.rs  mod.rs
crates/compliance-engine/src/rules/: attorney_fees.rs  deposit.rs  mod.rs  notices.rs  prohibited.rs
crates/compliance-engine/src/states/: arizona.rs  california.rs  florida.rs  florida_billofsale.rs  florida_contractor.rs  florida_realestate.rs  georgia.rs  illinois.rs  massachusetts.rs  michigan.rs  mod.rs  new_jersey.rs  new_york.rs  north_carolina.rs  ohio.rs  pennsylvania.rs  tennessee.rs  texas.rs  virginia.rs  washington.rs
crates/corpus-core/: Cargo.toml
crates/corpus-core/src/: config.rs  document.rs  embeddings.rs  lib.rs  storage.rs  verifier.rs
crates/corpus-core/src/search/: fusion.rs  gating.rs  keyword.rs  mod.rs  vector.rs
crates/docsign-core/: Cargo.toml
crates/docsign-core/src/: lib.rs
crates/email-proxy/: Cargo.toml  README.md
crates/email-proxy/src/: deliverability.rs  lib.rs  main.rs  ses.rs  types.rs
crates/pdfjoin-core/: Cargo.toml
crates/pdfjoin-core/src/: apply_operations.rs  command.rs  error.rs  lib.rs  merge.rs  operations.rs  split.rs  streaming.rs
crates/shared-crypto/: Cargo.toml
crates/shared-crypto/src/: cert.rs  lib.rs  tsa.rs
crates/shared-pdf/: Cargo.toml
crates/shared-pdf/src/: lib.rs  signer.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: audit.rs  lib.rs  types.rs
crates/shared-types/src/crypto/: mod.rs
crates/shared-types/src/pdf/: mod.rs  parser.rs
crates/typst-engine/: Cargo.toml
crates/typst-engine/examples/: generate_florida_realestate.rs  verify_florida_compliance.rs
crates/typst-engine/src/: lib.rs
crates/typst-engine/src/compiler/: errors.rs  mod.rs  output.rs  render.rs
crates/typst-engine/src/templates/: embedded.rs  mod.rs  registry.rs
crates/typst-engine/src/verifier/: anomaly.rs  extract.rs  mod.rs  parser.rs
crates/typst-engine/templates/: cma.typ  florida_bill_of_sale_boat.typ  florida_bill_of_sale_car.typ  florida_bill_of_sale_jetski.typ  florida_bill_of_sale_mobile_home.typ  florida_bill_of_sale_trailer.typ  florida_claim_of_lien.typ  florida_commercial_lease.typ  florida_contractor_invoice.typ  florida_escalation_addendum.typ  florida_eviction_notice.typ  florida_financing_contingency.typ  florida_flood_disclosure.typ  florida_inspection_contingency.typ  florida_lease.typ  florida_lease_termination.typ  florida_listing_agreement.typ  florida_notice_of_commencement.typ  florida_notice_to_owner.typ  florida_purchase_as_is.typ  florida_purchase_contract.typ  florida_realestate_requirements.md  florida_release_of_lien.typ  invoice.typ  letter.typ  texas_lease.typ
(+241 files in other folders)
