[package]
name = "agentpdf-server"
version.workspace = true
edition.workspace = true
description = "agentPDF proxy server - Typst template rendering and compliance checking"

[[bin]]
name = "agentpdf-server"
path = "src/main.rs"

[dependencies]
# Internal crates
typst-engine = { workspace = true, features = ["server"] }
compliance-engine = { workspace = true }
shared-types = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Rate limiting
governor = "0.6"
tower_governor = "0.4"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"
axum-test = "15"
pretty_assertions = { workspace = true }
