[package]
name = "corpus-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "corpus-api"
path = "src/main.rs"

[dependencies]
shared-types = { workspace = true }
corpus-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Utilities
async-trait = "0.1"
