[package]
name = "docsign-api"
version = "0.1.0"
edition = "2021"
description = "Backend API server for DocSign document signing"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
thiserror = "1"
dotenvy = "0.15"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
proptest = "1.4"
regex = "1.11"
