[package]
name = "benchmark-harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Browser automation
chromiumoxide = { version = "0.8", features = ["tokio-runtime"] }

# Async runtime
tokio = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }
tracing-subscriber = "0.3"
reqwest = "0.12"
regex = "1"
pdfjoin-core = { path = "../pdfjoin-core" }
lopdf = { workspace = true }
