[package]
name = "compliance-engine"
version.workspace = true
edition.workspace = true

[features]
default = ["florida-only"]
florida-only = []
all-states = []

[dependencies]
shared-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
proptest = "1.4"
pretty_assertions = { workspace = true }
