[package]
name = "docsign-core"
version.workspace = true
edition.workspace = true

[dependencies]
shared-types = { workspace = true }
shared-pdf = { workspace = true }
shared-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# PDF manipulation
lopdf = { workspace = true }

# Crypto
p256 = { workspace = true }
sha2 = { workspace = true }
cms = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
