[package]
name = "pdfjoin-core"
version.workspace = true
edition.workspace = true

[dependencies]
lopdf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
png = "0.17"
flate2 = "1.0"

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
regex = "1"
