[package]
name = "shared-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# Cryptography
p256 = { workspace = true }
sha2 = { workspace = true }
cms = { workspace = true }
x509-cert = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
base64 = "0.21"

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
