[package]
name = "shared-pdf"
version.workspace = true
edition.workspace = true

[dependencies]
shared-types = { workspace = true }
shared-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# PDF parsing
lopdf = { workspace = true }
pdf-extract = "0.7"

# Crypto
sha2 = { workspace = true }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
base64 = "0.21"

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
