[package]
name = "docsign-worker"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "wasmbind", "now"] }
base64 = "0.21"
sha2 = { workspace = true }
hmac = { workspace = true }
hex = "0.4"

# Cloudflare Workers (updated from 0.3 to 0.7)
worker = "0.7"

[dev-dependencies]
proptest = { workspace = true }
