[package]
name = "docsign-worker"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "wasmbind", "now"] }
base64 = "0.21"

# Cloudflare Workers (updated from 0.3 to 0.7)
worker = "0.7"

# Cryptographic primitives for session token signing (HMAC-SHA256)
hmac = "0.12"
sha2 = "0.10"

# User authentication
argon2 = { version = "0.5", default-features = false, features = ["std"] }
jsonwebtoken = "9.2"
uuid = { version = "1", default-features = false, features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
proptest = { workspace = true }
