[package]
name = "docsign-worker"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "wasmbind", "now"] }
base64 = "0.22"

# Cloudflare Workers (updated from 0.3 to 0.7)
worker = "0.7"

# Cryptographic primitives for session token signing (HMAC-SHA256)
hmac = "0.12"
sha2 = "0.10"

# User authentication (no jsonwebtoken - uses ring which doesn't compile to WASM)
argon2 = { version = "0.5", default-features = false, features = ["std"] }
uuid = { version = "1", default-features = false, features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }

# Stripe billing integration (REST API, not SDK - for Workers compatibility)
urlencoding = "2"
hex = "0.4"

# PDF manipulation for merge-on-demand (apply annotations server-side)
lopdf = { workspace = true }
png = "0.17"
flate2 = "1.0"

[dev-dependencies]
proptest = { workspace = true }
